Add: SecurityConfig modified